попытка исправить ситуацию 2.5